fix: remove text align

--- a/docs-website/src/pages/docs/_components/FeatureCard/featurecard.module.scss
+++ b/docs-website/src/pages/docs/_components/FeatureCard/featurecard.module.scss
@@ -22,7 +22,6 @@
   span {
     display: block;
     margin-bottom: 0.75rem;
-    text-align: center;
   }
   strong {
     font-weight: 600;
